# iqs323-driver

./: Cargo.toml
src/: channel_setup.rs  filter_betas.rs  general.rs  gesture_config.rs  i2c_settings.rs  lib.rs  movement_ui.rs  regs.rs  release_ui.rs  sensor_setup.rs  slider_config.rs  sys_control.rs  sys_info.rs
