[package]
name = "iqs323-driver"
authors = ["Alex Moon"]
version = "0.1.0"
edition = "2021"
description = "An embedded async driver for the IQS323 IQ Switch ProxFusion touch and proximity sensing controller."
documentation = "https://docs.rs/iqs323-driver"
repository = "https://github.com/tactile-eng/iqs323-driver"
license = "Apache-2.0"
keywords = ["embedded-hal-driver", "iqs323", "touch", "proximity", "sensor"]
categories = ["no-std", "embedded", "asynchronous", "hardware-support"]

[features]
"default" = []
"movement-ui" = []
"defmt-03" = ["embedded-hal/defmt-03", "embedded-hal-async/defmt-03", "dep:defmt"]

[dependencies]
array-concat = "0.5.3"
cfg-if = "1.0.0"
defmt = { version = "0.3", optional = true }
device-driver = { git = "https://github.com/diondokter/device-driver.git", rev = "d487ac42c60b88e0487607b95a78578bf971a00d" }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
heapless = "0.8.0"
num_enum = { version = "0.7.2", default-features = false }
